compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_multiple_sibling_elements.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n   <div>\n       <div>First</div>\n       <div>Second</div>\n       <div>Third</div>\n   </div>\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 110,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 108,
                                    },
                                    tag: Some(
                                        Var {
                                            location: SrcSpan {
                                                start: 21,
                                                end: 24,
                                            },
                                            name: "div",
                                        },
                                    ),
                                    children: Some(
                                        [
                                            Html {
                                                location: SrcSpan {
                                                    start: 33,
                                                    end: 49,
                                                },
                                                tag: Some(
                                                    Var {
                                                        location: SrcSpan {
                                                            start: 34,
                                                            end: 37,
                                                        },
                                                        name: "div",
                                                    },
                                                ),
                                                children: Some(
                                                    [
                                                        HtmlText {
                                                            location: SrcSpan {
                                                                start: 38,
                                                                end: 43,
                                                            },
                                                            value: "First",
                                                        },
                                                    ],
                                                ),
                                                attributes: [],
                                            },
                                            Html {
                                                location: SrcSpan {
                                                    start: 57,
                                                    end: 74,
                                                },
                                                tag: Some(
                                                    Var {
                                                        location: SrcSpan {
                                                            start: 58,
                                                            end: 61,
                                                        },
                                                        name: "div",
                                                    },
                                                ),
                                                children: Some(
                                                    [
                                                        HtmlText {
                                                            location: SrcSpan {
                                                                start: 62,
                                                                end: 68,
                                                            },
                                                            value: "Second",
                                                        },
                                                    ],
                                                ),
                                                attributes: [],
                                            },
                                            Html {
                                                location: SrcSpan {
                                                    start: 82,
                                                    end: 98,
                                                },
                                                tag: Some(
                                                    Var {
                                                        location: SrcSpan {
                                                            start: 83,
                                                            end: 86,
                                                        },
                                                        name: "div",
                                                    },
                                                ),
                                                children: Some(
                                                    [
                                                        HtmlText {
                                                            location: SrcSpan {
                                                                start: 87,
                                                                end: 92,
                                                            },
                                                            value: "Third",
                                                        },
                                                    ],
                                                ),
                                                attributes: [],
                                            },
                                        ],
                                    ),
                                    attributes: [],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            16,
            108,
            110,
        ],
    },
}
