compiler-core/src/parse/snapshots/rakun_core__parse__tests__html_self_closing_with_attributes.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1561
expression: "\npub fn main() {\n   <img src=\"image.png\" alt=\"Image description\" />\n   <input type=\"text\" placeholder=\"Enter text here\" />\n}\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: Function(
                    Function {
                        location: SrcSpan {
                            start: 1,
                            end: 14,
                        },
                        end_position: 124,
                        name: Some(
                            (
                                SrcSpan {
                                    start: 8,
                                    end: 12,
                                },
                                "main",
                            ),
                        ),
                        arguments: [],
                        body: [
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 20,
                                        end: 67,
                                    },
                                    tag: None,
                                    body: [],
                                    arguments: [
                                        HtmlTagAttr {
                                            attr: "src",
                                            location: SrcSpan {
                                                start: 25,
                                                end: 40,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 29,
                                                        end: 40,
                                                    },
                                                    value: "image.png",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "alt",
                                            location: SrcSpan {
                                                start: 41,
                                                end: 64,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 45,
                                                        end: 64,
                                                    },
                                                    value: "Image description",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                            Expression(
                                Html {
                                    location: SrcSpan {
                                        start: 71,
                                        end: 122,
                                    },
                                    tag: None,
                                    body: [],
                                    arguments: [
                                        HtmlTagAttr {
                                            attr: "type",
                                            location: SrcSpan {
                                                start: 78,
                                                end: 89,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 83,
                                                        end: 89,
                                                    },
                                                    value: "text",
                                                },
                                            ),
                                        },
                                        HtmlTagAttr {
                                            attr: "placeholder",
                                            location: SrcSpan {
                                                start: 90,
                                                end: 119,
                                            },
                                            value: Some(
                                                String {
                                                    location: SrcSpan {
                                                        start: 102,
                                                        end: 119,
                                                    },
                                                    value: "Enter text here",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ],
                        publicity: Public,
                        deprecation: NotDeprecated,
                        return_annotation: None,
                        return_type: (),
                        documentation: None,
                        external_erlang: None,
                        external_javascript: None,
                        implementations: Implementations {
                            rakun: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            16,
            67,
            122,
            124,
        ],
    },
}
