compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_pattern_label_shorthand_4.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1357
expression: "\npub fn main() {\n  let Wibble(arg: arg:) = todo\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg: arg:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:22
  │
3 │   let Wibble(arg: arg:) = todo
  │                      ^ I was not expecting this

Found `:`, expected one of: 
- `)`
