compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_pattern_label_shorthand_5.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let Wibble(arg1: arg2:) = todo\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg1: arg2:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:24
  │
3 │   let Wibble(arg1: arg2:) = todo
  │                        ^ I was not expecting this

Found `:`, expected one of: 
- `)`
